# 3-python-package-team_boreal

./: Pipfile  README.md  pyproject.toml  test.md
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
src/fortuneluckpredictor/: __init__.py  __main__.py  compatibility_score.py  fortune.py  futurePredictions.py  luckyNumber.py  predictDay.py
tests/: test_compatibility_score.py  test_fortune.py  test_futurePredictions.py  test_integration.py  test_lucky_number.py  test_main_integration.py  test_predict_day.py
