[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortuneluckpredictor"
version = "1.0.1"
authors = [
  { name = "Pranathi Chinthalapani, Sam Rawdon, May Zhou, Hanjun Deng, William Chan", email = "prc9852@nyu.edu" },
  { name = "Pranathi Chinthalapani", email = "prc9852@nyu.edu" },
  { name = "Sam Rawdon", email = "sr6360@nyu.edu" },
  { name = "May Zhou", email = "zz4206@nyu.edu" },
  { name = "Hanjun Deng", email = "hd2432@nyu.edu" },
  { name = "William Chan", email = "wc2184@nyu.edu" }
]
description = "Fortune & luck predictor. Returns lucky numbers, fortunes, and horoscope-like results."
readme = "README.md"
keywords = ["python", "package", "build", "cookie", "fun", "guess", "luck", "fortune"]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/swe-students-fall2025/3-python-package-team_boreal"
Repository = "https://github.com/swe-students-fall2025/3-python-package-team_boreal.git"
Issues = "https://github.com/swe-students-fall2025/3-python-package-team_boreal/issues"

[tool.bumpver]
current_version = "1.0.1"
pattern = "MAJOR.MINOR.PATCH"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"'
]
"src/fortuneluckpredictor/__init__.py" = [
    '__version__ = "{version}"'
]
